# upload-images-with-certification

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
src/asset_proxy/: Cargo.toml  asset_proxy.did
src/asset_proxy/src/: state_machine.rs  tests.rs
src/asset_proxy/src/asset_certification/: mod.rs
src/asset_proxy/src/asset_certification/types/: http.rs
src/upload-images-with-certification-backend/: Cargo.toml
src/upload-images-with-certification-frontend/: package.json
src/upload-images-with-certification-frontend/src/: App.js
